2015-01-29  Eli Zaretskii  <eliz@gnu.org>

	* dired.c (directory_files_internal, file_name_completion)
	[WINDOWSNT]: Signal an error when errno is set non-zero by
	'readdir', regardless of its value.

	* w32.c (sys_readdir): Set errno to ENOENT when the directory
	doesn't exist and to EACCES when it's not accessible to the
	current user.  Set errno to zero when FindNextFile exhausts the
	directory, so that callers don't interpret that as an error and
	don't signal a file-error.
	(open_unc_volume): Set errno to ENOENT if WNetOpenEnum fails.
2015-01-29  Eli Zaretskii  <eliz@gnu.org>

	Use bool for boolean in w32menu.c, w32font.c, w32uniscribe.c.
	* w32uniscribe.c (uniscribe_list, uniscribe_match): Use bool where
	appropriate.

	* w32font.c (struct font_callback_data, w32font_list_internal)
	(w32font_driver, w32font_match_internal): Use bool where appropriate.

	* w32menu.c (x_activate_menubar, set_frame_menubar)
	(w32_dialog_show, initialize_frame_menubar, w32_menu_show)
	(is_simple_dialog): Use bool where appropriate.

2015-01-28  Paul Eggert  <eggert@cs.ucla.edu>

	Use bool, not int, to track face changes
	* xfaces.c (face_change): Rename from face_change_count, and
	change from int to bool.  The var is now true (instead of nonzero)
	if attributes have changed; this is simpler.  All uses changed.
	Fixes: bug#19698

2015-01-27  Eli Zaretskii  <eliz@gnu.org>

	* dired.c (directory_files_internal) [WINDOWSNT]: If readdir
	returns NULL and errno is ENOTDIR, behave as if opendir failed to
	open the directory.  (Bug#19701)

	* w32.c (sys_readdir): If FindFirstFile fails because the
	directory doesn't exist, set errno to ENOTDIR.

2015-01-24  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.m (drawRect:): Add block/unblock_input (Bug#19660).

2015-01-21  Paul Eggert  <eggert@cs.ucla.edu>

	Fix coding.c subscript error
	* coding.c (CODING_ISO_INVOKED_CHARSET):
	Avoid undefined behavior if CODING_ISO_INVOCATION returns negative.

2015-01-17  Eli Zaretskii  <eliz@gnu.org>
